<resources>
    <string name="app_name">Github User V3</string>
    <string name="app_logo">App Logo</string>
    <string name="search_user">Search userDetail</string>
    <string name="username">Username</string>
    <string name="not_search_yet">You haven\'t searched any users yet</string>
    <string name="not_favorited_yet">You haven\'t favorited any users yet</string>
    <string name="empty_field_alert">Please fill this field</string>
    <string name="users_not_found">Users not found</string>
    <string name="unable_to_retrieve_data">
        Unable to retrieve data\n
        Please check your internet connection
    </string>
    <string name="button_back">Button back</string>
    <string name="detail_user">Detail User</string>

    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="no_users_found">No users found</string>
    <string name="button_home">Button home</string>
    <string name="icon_location">Icon location</string>
    <string name="icon_company">Icon company</string>
    <string name="icon_repositories">Icon repositories</string>

    <string-array name="user_foll_tab_text">
        <item>%1$d followers</item>
        <item>%1$d following</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_user">Favorite User</string>
    <string name="button_favorite_user">Button favorite user</string>
    <string name="light_mode">Light Mode</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
</resources>