<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:titleTextColor="@color/tertiary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivLogoApp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_github_white"
                android:contentDescription="@string/app_logo"
                app:tint="@color/tertiary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/tertiary"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium" />


        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            android:textColorHint="@color/secondary"
            app:boxStrokeColor="@color/secondary"
            app:hintTextColor="@color/secondary"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_search_white"
            app:endIconTint="@color/secondary"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
            app:startIconDrawable="@drawable/ic_person_white"
            app:startIconTint="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/secondary"
                android:textCursorDrawable="@null"
                android:imeOptions="actionSearch"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvAlertNotSearchedYet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/not_search_yet"
            android:layout_marginHorizontal="24dp"
            android:textColor="@color/secondary"
            android:textSize="21sp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutUsername" />

        <TextView
            android:id="@+id/tvAlert"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/users_not_found"
            android:layout_marginHorizontal="24dp"
            android:textColor="@color/secondary"
            android:textSize="21sp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutUsername" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            tools:listitem="@layout/item_user"
            tools:itemCount="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutUsername" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutUsername" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>