<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_background"
        tools:context=".UserDetailFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_primary"
            app:titleTextColor="@color/white_smoke"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/button_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_user"
                android:textColor="@color/white_smoke"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium" />

            <ImageView
                android:id="@+id/btnHome"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_home_white"
                android:contentDescription="@string/button_home" />

        </androidx.appcompat.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAva"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="48dp"
            tools:src="@drawable/ic_person_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarDetail" />

        <androidx.legacy.widget.Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivAva"
            app:layout_constraintEnd_toEndOf="@+id/ivAva" />

        <ImageView
            android:id="@+id/btnFavorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_circle_black"
            android:contentDescription="@string/button_favorite_user"
            android:padding="10dp"
            android:src="@drawable/ic_favorite_false"
            app:layout_constraintBottom_toBottomOf="@+id/ivAva"
            app:layout_constraintStart_toEndOf="@+id/space" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white_smoke"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAva"
            tools:text="Muammar Ahlan Abimanyu" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/gray_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            tools:text="muammarahlnn" />

        <ImageView
            android:id="@+id/ivLocation"
            android:visibility="invisible"
            tools:visibility="visible"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="48dp"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            android:contentDescription="@string/icon_location" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="48dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white_smoke"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivLocation"
            app:layout_constraintTop_toTopOf="@+id/ivLocation"
            tools:text="Makassar, Indonesia dan sebagainya yang membuat textview ini menjadi dua baris" />

        <ImageView
            android:id="@+id/ivCompany"
            android:visibility="invisible"
            tools:visibility="visible"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_company"
            android:contentDescription="@string/icon_company"
            app:layout_constraintStart_toStartOf="@+id/ivLocation"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white_smoke"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tvLocation"
            app:layout_constraintStart_toEndOf="@+id/ivCompany"
            app:layout_constraintTop_toTopOf="@+id/ivCompany"
            tools:text="Startup dimanapun yang dapat membuat textview ini menjadi dua baris juga" />

        <ImageView
            android:id="@+id/ivRepositories"
            android:visibility="invisible"
            tools:visibility="visible"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_repositories"
            app:layout_constraintStart_toStartOf="@+id/ivCompany"
            app:layout_constraintTop_toBottomOf="@+id/tvCompany"
            android:contentDescription="@string/icon_repositories" />

        <TextView
            android:id="@+id/tvRepositories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white_smoke"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tvCompany"
            app:layout_constraintStart_toEndOf="@+id/ivRepositories"
            app:layout_constraintTop_toTopOf="@+id/ivRepositories"
            tools:text="21" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/gray_primary"
            app:layout_constraintBottom_toTopOf="@+id/tabLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarDetail" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/black_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositories"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/gray_primary"
            app:tabMaxWidth="0dp"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/white_smoke"
            app:tabTextAppearance="@style/TabLayoutText"
            app:tabTextColor="@color/gray_primary" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAlert"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarDetail">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:text="@string/unable_to_retrieve_data"
                android:textColor="@color/gray_primary"
                android:textSize="21sp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>